# pytakeoff

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: Makefile  api.rst  conf.py  getting-started.md  guide.md  index.md  make.bat
docs/_ext/: examples_gallery.py
examples/: 01_create_api_key.py  02_connect.py  03_projects.py  04_foil_section.py  05_polar_analysis.py  06_optimization.py  07_foil_section.ipynb  08_analysis_2d.ipynb  09_optimization_2d.ipynb
src/pytakeoff/: __init__.py  __main__.py  analysis.py  auth.py  client.py  exceptions.py  foil_sections.py  keystore.py  optimizations.py  projects.py  transport.py
