[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytakeoff"
dynamic = ["version"]
description = "Python client for the Takeoff hydrofoil design platform"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Takeoff Technologies" }]
requires-python = ">=3.9"
keywords = ["hydrofoil", "aerodynamics", "foil", "cfd", "takeoff"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "requests>=2.28",
    "websocket-client>=1.6",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
docs = [
    "sphinx>=7",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
]

[project.urls]
Homepage = "https://github.com/takeoff-technologies/pytakeoff"
Repository = "https://github.com/takeoff-technologies/pytakeoff"

[tool.hatch.version]
path = "src/pytakeoff/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pytakeoff"]

# Restrict the source distribution to an explicit allowlist so local/agent
# working files (.claude, memory/, scratch) can never leak into a release.
[tool.hatch.build.targets.sdist]
include = [
    "src/pytakeoff",
    "examples",
    "docs",
    "README.md",
    "LICENSE",
]
